kuberV3_Net/jmeter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jmeter-service
  namespace: jmeter
spec:
  selector:
    app: jmeter-master
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
