kuberV3_Net/network-policy.yaml
# networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: jmeter
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
